# decp-processing

./: .env  .gitignore  .pre-commit-config.yaml  .test.env  CHANGELOG.md  Dockerfile  LICENSE  Pipfile  README.md  flows.py  marchés.ipynb  processing.drawio  proto.ipynb  publish.ipynb  pyproject.toml  sirene.ipynb  sirene_acheteurs.ipynb  sirene_titulaires.ipynb  template.env
data/: decp_augmente_valides_2019_test.csv  decp_augmente_valides_2022_test.csv  decp_json_files.json  decp_json_files_test.json  decp_test.json
drawings/: processing.drawio
script/: docker_build_and_run.bat  docker_run.bat  start_server_in_docker.sh
src/: config.py  deploy.py  flows.py  playground.py  schemas.py
src/tasks/: analyse.py  clean.py  enrich.py  get.py  output.py  publish.py  setup.py  test.py  transform.py
systemd/: prefect-worker.service
tasks/: clean.py  enrich.py  get.py  transform.py
tests/: fixtures.py  test_get.py  test_main.py  test_sirene_preprocess.py  test_transform.py
tests/fixtures/: decp.json  decp_id_acheteurs.json
