[project]
name = "decp-processing"
description = "An introductory project to Prefect"
version = "2.0.0"
requires-python = ">= 3.9"
authors = [
    { name = "Colin Maudry", email = "colin+decp@maudry.com" }
]
dependencies = [
    "python-dotenv",
    "pandas",
    "polars",
    "pyarrow",
    "tableschema",
    "frictionless==4.40.11",
    "datapackage-to-datasette",
    "ipykernel",
    "prefect",
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "pytest-env",
    "pytest",
]

[tool.pytest.ini_options]
pythonpath = [
  "src"
]
testpaths = [
    "tests",
]
env = [
    "DECP_JSON_FILES_PATH=data/decp_json_files_test.json",
    "PREFECT_API_URL="
]
addopts = "-p no:warnings"

[tool.prefect]
logging.level = "INFO"
