[project]
name = "decp-processing"
description = "Traitement des données des marchés publics français."
version = "0.1.1"
requires-python = ">= 3.8"
authors = [
    { name = "Colin Maudry", email = "colin+decp@maudry.com" }
]
dependencies = [
    "python-dotenv",
    "pandas",
    "polars",
    "pyarrow",
    "tableschema",
    "frictionless==4.40.11",
    "datapackage-to-datasette",
    "ipykernel",
    "prefect==3.3.3",
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "pytest-env",
    "pytest",
]

[tool.pytest.ini_options]
pythonpath = [
  "src"
]
testpaths = [
    "tests",
]
env = [
    "DECP_JSON_FILES_PATH=data/decp_json_files_test.json",
    "PREFECT_API_URL="
]
addopts = "-p no:warnings"

[tool.prefect]
logging.level = "INFO"
