[project]
name = "decp-processing"
description = "Traitement des données des marchés publics français."
version = "2.0.1"
requires-python = ">= 3.9"
authors = [
    { name = "Colin Maudry", email = "colin+decp@maudry.com" }
]
dependencies = [
    "python-dotenv",
    "pandas",
    "polars==1.27.0",
    "pyarrow",
    "tableschema",
    "frictionless==4.40.11",
    "ipykernel",
    "prefect==3.3.3",
    "orjson",
    "ijson"
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "pytest-env",
    "pytest",
]

[tool.pytest.ini_options]
pythonpath = [
  "src"
]
testpaths = [
    "tests",
]
env = [
    "DECP_JSON_FILES_PATH=data/decp_json_files_test.json",
    "PREFECT_API_URL=",
    "DECP_PROCESSING_PUBLISH="
]
addopts = "-p no:warnings"

[tool.prefect]
logging.level = "INFO"
